# levelparser

./: CMakeLists.txt  README.md
include/: levelparser.hpp
src/: levelparser.cpp
test/: CMakeLists.txt  main.cpp
test/run/: test.level
test/tools/: genGhunk  genGhunk.cpp  genTable  genTable.cpp
